--- a/index.html
+++ b/index.html
@@ -7,17 +7,28 @@
         <title>Lindsay's GMDB</title>
     </head>
     <body>
-        <header>
-            <div class="row">
-                <div class="col col-med-2"><p>GMDB</p></div>
-                <div class="col col-med-2 offset-med-1"><p>Home</p> </div>
-                <div class="col col-med-2 offset-med-1"><p>Login</p> </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+              <a class="navbar-brand" href="#">GMDB</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Login</a>
+                  </li>
+                </ul>
+                <form class="d-flex headerForm">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-warning" type="submit">Search</button>
+                </form>
+              </div>
             </div>
-            <div class="containerSearch">
-                <input class="searchBar" type="text" placeholder="Search">
-                <button type="button" class="btn btn-dark">Search</button>
-            </div>
-        </header>
+          </nav>
         <div class="main">
             <h1 class="login">Login</h1>
             <form class="loginInfo">
