--- a/candyMan.html
+++ b/candyMan.html
@@ -3,20 +3,20 @@
     <head>
         <meta charset="utf-8">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link href="index.css" rel="stylesheet">
+        <link href="popUp.css" rel="stylesheet">
         <title>Lindsay's GMDB</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-              <a class="navbar-brand" href="index.html">GMDB</a>
+              <a class="navbar-brand" href="movieDisplay.html">GMDB</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link disabled" aria-current="page" href="movieDisplay.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="movieDisplay.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="index.html">Login</a>
@@ -29,20 +29,31 @@
               </div>
             </div>
           </nav>
-        <div class="main">
-            <h1 class="login">Login</h1>
-            <form class="loginInfo">
-                <div class="mb-3">
-                    <label for="inputEmail" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+          <div class="container-flex backButton">
+              <a href="movieDisplay.html">Back to results</a>
+          </div>
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-2">
+                <img src="https://m.media-amazon.com/images/M/MV5BOWEzNDAxYmEtYWU0Zi00ZjZjLTkxY2QtMGY1MjY5ZjVhNDdjXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_UX67_CR0,0,67,98_AL_.jpg" alt="...">
+              </div>
+              <div class="col-md-6">
+                <div class="card-body">
+                  <h5 class="card-title">Candyman</h5>
+                  <h6 class="releaseDate">2021</h6>
+                  <p class="card-text">Horror|Director: Nia DaCosta</p>
+                  <p class="card-text">A sequel to the horror film Candyman (1992) that returns to the now-gentrified Chicago neighborhood where the legend began.</p>
                 </div>
-                <div class="mb-3">
-                    <label for="inputPassword" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="inputPassword">
-                </div>
-                <a class="btn btn-primary" href="movieDisplay.html">Submit</a>
-            </form>
-        </div>
+              </div>
+            </div>
+          </div>
+          <form>
+            <div class="mb-3">
+                <label class="inputsLabel" for="inputs">Leave a comment:</label>
+                <input type="text" class="form-control" id="inputs">
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
